# TiHiY-MultiStream-Pro-OBS-Plugin

./: 00_READ_FIRST_UA.md  01_UPLOAD_TO_TEMPLATE_REPO_CHECKLIST_UA.txt  02_OLD_REPO_ERROR_EXPLAINED_UA.txt  CMakeLists.txt  LICENSE.txt  README_TEMPLATE_OVERLAY_UA.txt  README_UA.md  buildspec.json
.github/workflows/: build-windows.yml
data/locale/: en-US.ini
docs/: NATIVE_PLUGIN_NOTES_UA.md
installer/: TiHiYMultiStreamPro.iss
src/: plugin-main.cpp  tihiy-multistream-dock.cpp  tihiy-multistream-dock.hpp
tools/: 00_DO_NOT_RUN_IN_OLD_REPO.txt  01_BUILD_LOCAL_WINDOWS.bat  02_INSTALL_AFTER_BUILD.bat  03_UNINSTALL_NATIVE_PLUGIN.bat  INSTALL_PLUGIN_SIMPLE.bat  MAKE_INSTALLER_FROM_ACTIONS_ARTIFACT.bat
